--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
+  
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +42,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0",
-    "homepage": "https://github.com/SurakshaKumari/timeStoriesApi.git"
+    "homepage": "https://github.com/SurakshaKumari/timestoriesApi.git"
   }
 }
